--- a/apps/Manager/views/projects/tasks.phtml
+++ b/apps/Manager/views/projects/tasks.phtml
@@ -16,6 +16,18 @@
 
     <div class="row">
       <div class="col-sm-2">
+        <input type="text" name="search" class="form-control form-control-circle" placeholder="Filtro" data-search >
+        <hr class="sm">
+        <div class="btn-group btn-group-justified">
+          <a role="button" class="btn btn-warning" data-filter="1" >Abertos</a>
+          <a role="button" class="btn btn-warning" data-filter="2" >Concluídos</a>
+          <!-- <a role="button" class="btn btn-warning" data-filter="3" >Cancelados</a> -->
+        </div>
+        <hr class="sm">
+        <button type="button" class="btn btn-success btn-block " data-toggle="modal" data-target="#addTask">
+          <span class="fa fa-plus"></span> Adicionar Tarefa
+        </button>
+        <hr class="sm">
         <div class="panel panel-default">
           <div class="panel-heading clean">Navegação</div>
           <div class="panel-body no-padd">
@@ -34,12 +46,6 @@
       <div class="col-md-10">
             <div class="col-lg-12 col-md-12">
               <div class="panel panel-default">
-                <div class="panel-heading space-between">
-                  <input type="text" name="search" class="form-control form-control-circle" placeholder="Filtro" data-search style="margin-right:15px" />
-                  <button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#addTask" >
-                    <span class="fa fa-plus"></span> Adicionar Tarefa
-                  </button>
-                </div>
                 <table class="table table-striped no-margn">
                     <thead>
                       <tr>
